--- a/ReelHub.Website/Views/Shared/_Layout.cshtml
+++ b/ReelHub.Website/Views/Shared/_Layout.cshtml
@@ -36,6 +36,17 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Directors" asp-action="Index">Directors</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Index">Movies</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav flex-grow-0">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MovieActors" asp-action="Index">Movie Actors</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MovieDirectors" asp-action="Index">Movie Directors</a>
+                        </li>
                     </ul>
                 </div>
             </div>
