--- a/ReelHub.Website/Views/MovieActors/Create.cshtml
+++ b/ReelHub.Website/Views/MovieActors/Create.cshtml
@@ -13,12 +13,18 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="MovieId" class="control-label"></label>
-                <select asp-for="MovieId" class ="form-control" asp-items="ViewBag.MovieId"></select>
+                <label asp-for="Movie" class="control-label"></label>
+                <select asp-for="MovieId" class ="form-control" asp-items="ViewBag.MovieId">
+                    <option value="" selected disabled hidden>-- Select a movie --</option>
+                </select>
+                <span asp-validation-for="MovieId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ActorId" class="control-label"></label>
-                <select asp-for="ActorId" class ="form-control" asp-items="ViewBag.ActorId"></select>
+                <label asp-for="Actor" class="control-label"></label>
+                <select asp-for="ActorId" class ="form-control" asp-items="ViewBag.ActorId">
+                    <option value="" selected disabled hidden>-- Select an actor --</option>
+                </select>
+                <span asp-validation-for="ActorId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CharacterName" class="control-label"></label>
